--- a/kernel-uksm/arch/arm/mach-ux500/board-mop500-regulators.org
+++ b/kernel-uksm/arch/arm/mach-ux500/board-mop500-regulators.org
@@ -34,12 +34,9 @@ static struct regulator_consumer_supply tps61052_vaudio_consumers[] = {
 struct regulator_init_data tps61052_regulator = {
 	.constraints = {
 		.name = "vaudio-hf",
-		.min_uV = 3800000,
+		.min_uV = 4500000,
 		.max_uV = 4500000,
-                        .valid_ops_mask = REGULATOR_CHANGE_VOLTAGE |
-                                          REGULATOR_CHANGE_STATUS |
-					  REGULATOR_CHANGE_DRMS ,
-
+		.valid_ops_mask = REGULATOR_CHANGE_STATUS,
 	},
 	.num_consumer_supplies = ARRAY_SIZE(tps61052_vaudio_consumers),
 	.consumer_supplies = tps61052_vaudio_consumers,
@@ -388,8 +385,7 @@ static struct regulator_init_data ab8500_regulators[AB8500_NUM_REGULATORS] = {
 			.max_uV = 3300000,
 			.valid_ops_mask = REGULATOR_CHANGE_VOLTAGE |
 					  REGULATOR_CHANGE_STATUS |
-					  REGULATOR_CHANGE_MODE |
-                                          REGULATOR_CHANGE_DRMS,
+					  REGULATOR_CHANGE_MODE ,
 			.valid_modes_mask = REGULATOR_MODE_NORMAL |
 					    REGULATOR_MODE_IDLE,
 			.boot_keep = 1, /* eMMC must remain powered from boot */
@@ -406,8 +402,7 @@ static struct regulator_init_data ab8500_regulators[AB8500_NUM_REGULATORS] = {
 			.max_uV = 3300000,
 			.valid_ops_mask = REGULATOR_CHANGE_VOLTAGE |
 					  REGULATOR_CHANGE_STATUS |
-					  REGULATOR_CHANGE_MODE |
-                                          REGULATOR_CHANGE_DRMS,
+					  REGULATOR_CHANGE_MODE ,
 			.valid_modes_mask = REGULATOR_MODE_NORMAL |
 					    REGULATOR_MODE_IDLE,
 		},
@@ -484,8 +479,7 @@ static struct regulator_init_data ab8500_regulators[AB8500_NUM_REGULATORS] = {
                         .max_uV = 2910000,
                         .valid_ops_mask = REGULATOR_CHANGE_VOLTAGE |
                                           REGULATOR_CHANGE_STATUS |
-                                          REGULATOR_CHANGE_MODE |
-                                          REGULATOR_CHANGE_DRMS,
+                                          REGULATOR_CHANGE_MODE,
                         .valid_modes_mask = REGULATOR_MODE_NORMAL |
                                             REGULATOR_MODE_IDLE,
 		},
